--- a/localisation/french/MD_NATO_events_l_french.yml
+++ b/localisation/french/MD_NATO_events_l_french.yml
@@ -25,15 +25,15 @@
  RULE_CANT_KICK_OUT_OF_NATO: "§RNous ne pouvons pas exclure des pays de l'OTAN!§!"
  RULE_CANT_ASSUME_LEADERSHIP_OF_NATO: "§RLa direction de l'OTAN dans la guerre est confiée au leader d'origine!§!"
  nato_join_Nato_Nuclear_Sharing: "Rejoindre le partage nucléaire"
- nato_join_Nato_Nuclear_Sharing_desc: "Le partage nucléaire est un concept de la politique de dissuasion nucléaire de l'OTAN, qui permet à tous les pays membres ne possédant pas d'armes nucléaires de participer à la planification de l'utilisation des armes nucléaires par l'OTAN, à laquelle nous devrions adhérer."
+ nato_join_Nato_Nuclear_Sharing_desc: "Le partage nucléaire est un concept de la politique de dissuasion nucléaire de l'OTAN, qui permet à tous les pays membres ne possédant pas d'armes nucléaires de participer à la planification de l'utilisation d'armes nucléaires par l'OTAN, auquel nous devrions adhérer pour assurer la sécurité de notre nation."
  Nato_Nuclear_Sharing: "Demander l'accès aux armes nucléaires"
- Nato_Nuclear_Sharing_desc: "Les tensions montent, nous avons besoin de ces armes pour défendre notre pays et nos alliés"
- nato_leave_Nato_Nuclear_Sharing: "Quitter le groupe de partage"
- nato_leave_Nato_Nuclear_Sharing_desc: "Nous ne voulons plus faire partie de ce groupe. Plus d’armes nucléaires étrangères dans notre pays."
- Nato_Nuclear_Sharing_I_TT: "Nous avons accès à §Y[USA.GetNameWithFlag]§! §Y20 ogive nucléaire 45kt§! et §Y20 MC§! pendant §Y365 jours§!\n"
+ Nato_Nuclear_Sharing_desc: "Les tensions montent, nous devons mettre la main sur l’arme nucléaire pour défendre notre pays et nos alliés."
+ nato_leave_Nato_Nuclear_Sharing: "Quitter le groupe de partage nucléaire"
+ nato_leave_Nato_Nuclear_Sharing_desc: "Nous ne voulons plus faire partie du groupe de partage nucléaire. Nous devons débarrasser notre nation de toutes les armes étrangères stockées ici."
+ Nato_Nuclear_Sharing_I_TT: "Nous avons accès à 20 §Y[USA.GetNameWithFlag]§! §Yogive nucléaire 45kt§! et §Y20 MC§! pendant §Y365 jours§!\n"
  Nato_Nuclear_Sharing_II_TT: ""
  NATO_idea_Nuclear_sharing_Groupe: "Groupe de partage nucléaire de l'OTAN"
- NATO_idea_Nuclear_sharing_Groupe_desc: "Le partage nucléaire est un concept de la politique de dissuasion nucléaire de l'OTAN, qui permet à tous les pays membres ne possédant pas d'armes nucléaires de participer à la planification de l'utilisation des armes nucléaires par l'OTAN."
+ NATO_idea_Nuclear_sharing_Groupe_desc: "Le partage nucléaire est un concept de la politique de dissuasion nucléaire de l'OTAN, qui permet à tous les pays membres ne possédant pas d'armes nucléaires de participer à la planification de l'utilisation d'armes nucléaires par l'OTAN, auquel nous devrions adhérer pour assurer la sécurité de notre nation."
  NATO.1.t: "[FROM.GetNameDefCap] et l'OTAN"
  NATO.1.d: "[FROM.GetNameDefCap] [FROM.GetEstSontNP] membre[FROM.GetXSNP] de l'OTAN. Si nous leur déclarons la guerre, ils auront la possibilité d'appeler d'autres membres de l'OTAN à la guerre. Cela signifie qu'il est fort probable que nous nous retrouverions en guerre avec la majorité de l'OTAN."
  NATO.1.a: "Noté."
