--- a/localisation/simp_chinese/MD_NATO_events_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_NATO_events_l_simp_chinese.yml
@@ -80,12 +80,12 @@
  RULE_CANT_KICK_OUT_OF_NATO: "§R我们不能将国家踢出北约！§!"
  RULE_CANT_ASSUME_LEADERSHIP_OF_NATO: "§R北约在战争中的领导权锁定在原来的领导者身上！§!"
  nato_join_Nato_Nuclear_Sharing: "加入核共享"
- nato_join_Nato_Nuclear_Sharing_desc: "核共享是北约核威慑政策中的一个概念，允许所有自己没有核武器的成员国参与北约使用核武器的规划，我们应该加入。"
- Nato_Nuclear_Sharing: "要求获得核武器"
- Nato_Nuclear_Sharing_desc: "紧张局势正在加剧，我们需要获得这些武器来保卫我们的国家和我们的盟友。"
- nato_leave_Nato_Nuclear_Sharing: "离开核共享集团"
- nato_leave_Nato_Nuclear_Sharing_desc: "我们不想再成为这些团体的一部分。我们的国家之内不再有外国核武器。"
- Nato_Nuclear_Sharing_I_TT: "我们可以在§Y365天内§!获得§Y[USA.GetNameWithFlag]§!制造的§Y20枚4.5万吨当量核弹头§!以及§Y20枚空射制导导弹§!\n"
+ nato_join_Nato_Nuclear_Sharing_desc: "核共享是北约核威慑政策的一个概念，该政策允许所有没有核武器的成员国参与北约使用核武器的规划，我们应该加入其中，以确保国家安全。"
+ Nato_Nuclear_Sharing: "请求获得核武器"
+ Nato_Nuclear_Sharing_desc: "紧张局势正在加剧，我们需要获得核武器来保卫我们的国家和盟友。"
+ nato_leave_Nato_Nuclear_Sharing: "退出核共享集团"
+ nato_leave_Nato_Nuclear_Sharing_desc: "我们不想再成为核共享集团的一部分。我们必须清除我们国家储存的所有外国武器。"
+ Nato_Nuclear_Sharing_I_TT: "我们可以在§Y365天内§!获得20枚§Y[USA.GetNameWithFlag]§!制造的§Y4.5万吨当量核弹头§!以及§Y20枚空射制导导弹§!\n"
  Nato_Nuclear_Sharing_II_TT: ""
  NATO_idea_Nuclear_sharing_Groupe: "北约核共享集团"
- NATO_idea_Nuclear_sharing_Groupe_desc: "核共享是北约核威慑政策中的一个概念，允许所有自己没有核武器的成员国参与北约使用核武器的规划。"
+ NATO_idea_Nuclear_sharing_Groupe_desc: "核共享是北约核威慑政策的一个概念，该政策允许所有没有核武器的成员国参与北约使用核武器的规划，我们应该加入其中，以确保国家安全。"
