Missing tech localization

--- a/localisation/simp_chinese/replace/replaced_from_vanilla_research_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/replaced_from_vanilla_research_l_simp_chinese.yml
@@ -42,3 +42,6 @@
  CAT_computing_tech: "计算机科技"
  CAT_air_doctrine: "空军学说"
  CAT_land_doctrine: "陆军学说"
+ CAT_industry: "工业"
+ CAT_encryption_tech: "加密"
+ CAT_decryption_tech: "解密"
