--- a/localisation/english/replace/replaced_from_vanilla_research_l_english.yml
+++ b/localisation/english/replace/replaced_from_vanilla_research_l_english.yml
@@ -42,3 +42,6 @@
  CAT_computing_tech: "Computing Tech"
  CAT_air_doctrine: "Air Doctrines"
  CAT_land_doctrine: "Land Doctrines"
+ CAT_industry: "Industry"
+ CAT_encryption_tech: "Encryption Tech"
+ CAT_decryption_tech: "Decryption Tech"
