Fixed some stuff and some other minor changes

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -113,6 +113,7 @@ v1.10.0
   - Fixed the Deals with China/Deals with Russia focus in VEN having the opinion being inversed
   - Fixed a missing icon in the Syrian national spirits
   - Cleaned up a tooltip for a San Marino investments to make it clearer
+  - Fixed the spamming of a error regarding the DXX tags not having a capital scope
   - Germany will not receive events with debuffs pretaining to the East-West divide if Die Linke is in power
 
  Content:
@@ -193,6 +194,7 @@ v1.10.0
   - Added party icons to much of the Western African tags
   - Additional french models
   - Reworked Law & Spending GFX
+  - Updated the icons for the Factions to be more standardized
   - Animated several old models
 
  Localization:
@@ -214,6 +216,7 @@ v1.10.0
   - Re/Localised ETH and ERI political parties
   - Fixed typos in a number of the technology descriptions
   - Fixed and improved the localization in parts of the Comorosian content
+  - Updated the political parties of the USoE to the new standard
 
  Map:
   - Revamp Iran region
