--- a/localisation/english/MD_focus_ENG_l_english.yml
+++ b/localisation/english/MD_focus_ENG_l_english.yml
@@ -245,7 +245,7 @@
  ENG_restore_the_raj: "Restore the Raj"
  ENG_restore_the_raj_desc: "India was once our crown jewel. We will need to bring the good old times back. The Indians will probably throw tens of millions of soldiers at us - but Britain will stand supreme. We conquered them once, we will do it again."
  ENG_revolt_in_quebec: "Revolt in Quebec"
- ENG_revolt_in_quebec_desc: "We will free the Franco Canadian population in Quebec from their evil oppressors. And, if we are lucky, the then isolated provinces on the east coast might fall to us."
+ ENG_revolt_in_quebec_desc: "We will free the Franco-Canadian population in Quebec from their evil oppressors. And, if we are lucky, the then isolated provinces on the east coast might fall to us."
  ENG_jingoism: "Jingoism"
  ENG_jingoism_desc: "Enough talk. Let's kill."
  ENG_army_doctrine_3: "Army Doctrine III"
@@ -253,9 +253,9 @@
  ENG_naval_doctrine_3: "Naval Doctrine III"
  ENG_naval_doctrine_3_desc: "The navy must be the best there ever could be."
  ENG_one_union: "Revive Churchill's Europe"
- ENG_one_union_desc: "Let Europe arise! - This famous words of Sir Winston Churchill should guide us to a future in Europe."
+ ENG_one_union_desc: "Let Europe arise! - These famous words of Sir Winston Churchill should guide us to a future in Europe."
  ENG_union_of_nations: "Union of Nations"
- ENG_union_of_nations_desc: "The European Union is a grand project, but the different nation states need to be preserved. A united EU would not be great."
+ ENG_union_of_nations_desc: "The European Union is a grand project, but the different nation-states need to be preserved. A united EU would not be great."
  ENG_royal_army: "Royal Army"
  ENG_royal_army_desc: "While there is a Royal Navy and a Royal Air Force, our army is not yet royal. Let's give them such a designation, honoring their most recent achievements."
  ENG_britannia_rules_the_waves: "Britannia rules the Waves"
