--- a/localisation/english/MD_defence_companies_l_english.yml
+++ b/localisation/english/MD_defence_companies_l_english.yml
@@ -10,8 +10,8 @@
  AST_thales_australia_tank_manufacturer: "Thales Australia"
  AUS_steyr_mannlicher_materiel_manufacturer: "Steyr Mannlicher"
  AUS_general_dynamics_steyr_tank_manufacturer: "General Dynamics Steyr"
- AZE_azerbaijani_defense_industry_materiel_manufacturer: "Azerbaijani Defense Industry"
- AZE_azerbaijani_defense_industry_tank_manufacturer: "Azerbaijani Defense Industry"
+ AZE_azerbaijani_defense_industry_materiel_manufacturer: "Azerbaijani Defense Industry - Materiel Division"
+ AZE_azerbaijani_defense_industry_tank_manufacturer: "Azerbaijani Defense Industry - Armoured Division"
  BEL_fn_herstal_materiel_manufacturer: "FN Herstal"
  BEL_cmi_defence_tank_manufacturer: "CMI Defence"
  BEL_sabiex_international_tank_manufacturer: "Sabiex International"
@@ -23,13 +23,13 @@
  BRA_embraer_aircraft_manufacturer: "Embraer"
  BRA_arsenal_do_marinha_naval_manufacturer: "Arsenal do Marinha"
  BUL_arsenal_materiel_manufacturer: "Arsenal"
- BRM_burma_defence_industries_materiel_manufacturer: "Myanmar Defence Industries"
- BRM_burma_defence_industries_tank_manufacturer: "Myanmar Defence Industries"
+ BRM_burma_defence_industries_materiel_manufacturer: "Myanmar Defence Industries - Materiel Division"
+ BRM_burma_defence_industries_tank_manufacturer: "Myanmar Defence Industries - Armoured Division"
  CAN_diemaco_materiel_manufacturer: "Diemaco"
  CAN_general_dynamics_land_systems_tank_manufacturer: "General Dynamics Land Systems"
  CAN_marine_industries_limited_naval_manufacturer: "Marine Industries Limited"
- CHI_norinco_tank_manufacturer: "Norinco"
- CHI_norinco_materiel_manufacturer: "Norinco"
+ CHI_norinco_tank_manufacturer: "Norinco - Armoured Division"
+ CHI_norinco_materiel_manufacturer: "Norinco - Materiel Division"
  CHI_inner_mongolia_first_machinery_tank_manufacturer: "Inner Mongolia First Machinery"
  CHI_chengdu_aircraft_corp_aircraft_manufacturer: "Chengdu Aircraft Corp"
  CHI_shenyang_aircraft_corp_aircraft_manufacturer: "Shenyang Aircraft Corp"
@@ -38,8 +38,8 @@
  CHI_changhe_aircraft_corp_tank_manufacturer: "Changhe Aircraft Corp"
  CHI_china_state_shipbuilding_corporation_naval_manufacturer: "China State Shipbuilding Corporation"
  CHI_china_shipbuilding_industry_corporation_naval_manufacturer: "China Shipbuilding Industry Corporation"
- CHL_famae_materiel_manufacturer: "FAMAE"
- CHL_famae_tank_manufacturer: "FAMAE"
+ CHL_famae_materiel_manufacturer: "FAMAE - Materiel Division"
+ CHL_famae_tank_manufacturer: "FAMAE - Armoured Division"
  CHL_enaer_aircraft_manufacturer: "ENAER"
  CHL_asmar_naval_manufacturer: "ASMAR"
  COL_indumil_materiel_manufacturer: "Indumil"
@@ -49,12 +49,12 @@
  CZE_aero_aircraft_manufacturer: "Aero"
  CZE_czub_materiel_manufacturer: "CZUB"
  CZE_vop_tank_manufacturer: "VOP"
- DEN_falck_schmidt_tank_manufacturer: "Falck-Schmidt"
- DEN_falck_schmidt_materiel_manufacturer: "Falck-Schmidt"
+ DEN_falck_schmidt_tank_manufacturer: "Falck-Schmidt - Armoured Division"
+ DEN_falck_schmidt_materiel_manufacturer: "Falck-Schmidt - Materiel Division"
  DEN_naval_manufacturer_maersk: "Mærsk"
  DEN_defence_skandinavisk_aero_industri: "Skandinavisk Aero Industri"
- EGY_kader_factory_tank_manufacturer: "Kader Factory"
- EGY_kader_factory_materiel_manufacturer: "Kader Factory"
+ EGY_kader_factory_tank_manufacturer: "Kader Factory - Armoured Division"
+ EGY_kader_factory_materiel_manufacturer: "Kader Factory - Materiel Division"
  EGY_helwan_machine_tools_tank_manufacturer: "Helwan Machine Tools"
  EGY_maadi_arms_materiel_manufacturer: "Maadi Arms"
  EGY_abhco_tank_manufacturer: "ABHCO"
@@ -75,8 +75,8 @@
  GEO_tbilisi_aircraft_manufacturing_tank_manufacturer: "Tbilisi Aircraft Manufacturing"
  GEO_tbilisi_aircraft_manufacturing_materiel_manufacturer: "Tbilisi Aircraft Manufacturing"
  GER_krauss_maffei_tank_manufacturer: "Krauss-Maffei"
- GER_rheinmetall_materiel_manufacturer: "Rheinmetall"
- GER_rheinmetall_tank_manufacturer: "Rheinmetall"
+ GER_rheinmetall_materiel_manufacturer: "Rheinmetall - Materiel Division"
+ GER_rheinmetall_tank_manufacturer: "Rheinmetall - Armoured Division"
  GER_heckler_koch_materiel_manufacturer: "Heckler & Koch"
  GER_airbus_defence_aircraft_manufacturer: "Airbus Defence"
  GER_airbus_helicopters_tank_manufacturer: "Airbus Helicopters"
