French Foreign Legion/Pillar of Counterterrorism icon

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -3,6 +3,9 @@ v1.10.1
  Bugfixes:
   - Fixed all of the intro focuses bypassing for Serbia
 
+ Graphics:
+  - Added unique graphics to the "Pillar of Counter Terrorism" and "French Foreign Legion" idea icons
+
 v1.10.0
 
  Achievements:
