--- a/localisation/english/MD_focus_GRN_l_english.yml
+++ b/localisation/english/MD_focus_GRN_l_english.yml
@@ -114,10 +114,10 @@
  GRN_modify_alcohol_abuse_tt:0 "Greenlandic alcohol abuse changes by [?GRN.modify_alcohol_abuse|0=-] (Current: [?GRN.alcohol_abuse_var|0-])"
  
  GRN_cultural_integrity_tt:0 "Greenlandic Cultural Integrity"
- GRN_cultural_integrity_info_tt:0 "Cultural Integrity: [?GRN.cultural_integrity_var|0-]"
+ GRN_cultural_integrity_info_tt:0 "Cultural Integrity: [?GRN.cultural_integrity_var|0+]"
  
  GRN_remove_cultural_integrity_tt:0 "Removes your current idea with §YGreenlandic Cultural Integrity§!\n"
- GRN_modify_cultural_integrity_tt:0 "Greenlandic Cultural Integrity changes by [?GRN.modify_cultural_integrity|0=-] (Current: [?GRN.cultural_integrity_var|0-])"
+ GRN_modify_cultural_integrity_tt:0 "Greenlandic Cultural Integrity changes by [?GRN.modify_cultural_integrity|0=+] (Current: [?GRN.cultural_integrity_var|0+])"
 
  ############
  ## EVENTS ##
