Fixed some Cuba stuff

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,7 +1,13 @@
 v1.10.1
 
+ AI:
+  - Fixed the historical AI inaccuracy where the Communist Party of Cuba wouldn't take the Pro-LGBT Policies
+
  Bugfixes:
   - Fixed all of the intro focuses bypassing for Serbia
+
+ Content:
+  - The Communist Party of Cuba can now take the pro-LGBT policies
 
  Graphics:
   - Added unique graphics to the "Pillar of Counter Terrorism" and "French Foreign Legion" idea icons
