--- a/Changelog.txt
+++ b/Changelog.txt
@@ -5,6 +5,7 @@ v1.10.1
 
  Bugfixes:
   - Fixed all of the intro focuses bypassing for Serbia
+  - USAID will cancel if the USA no longer exists
 
  Content:
   - The Communist Party of Cuba can now take the pro-LGBT policies
