Some cleanup and post patch cleanup

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -2,6 +2,10 @@ v1.10.1
 
  AI:
   - Fixed the historical AI inaccuracy where the Communist Party of Cuba wouldn't take the Pro-LGBT Policies
+  - Cleaned up an Operation Enduring Freedom AI strategies so they're more performant friendly
+
+ Balance:
+  - Removed the armor value from "NextGen Design Mindset" since helicopters typically don't have armor
 
  Bugfixes:
   - Fixed all of the intro focuses bypassing for Serbia
