Revert "serbia fix"
This reverts commit 49fdb19b29d58cb24dc6593d1f951446f7c80d37.

--- a/localisation/english/MD_focus_SER_VOJ_MNT_l_english.yml
+++ b/localisation/english/MD_focus_SER_VOJ_MNT_l_english.yml
@@ -77,8 +77,8 @@
  SER_debt_reconstructure: "Debt Restructuring"
  SER_debt_reconstructure_desc: "To help control our debt situation, we are buying time by assuring those we owe and asking for lower interest rates temporarily to make the process of paying back easier."
  ##########Flags##########
- SER_milosevic_stays: "§YSlobodan Miloševic does not leave office after the 2000 elections§!"
- SER_milosevic_leaves: "§YSlobodan Miloševic leaves office after the 2000 elections§!"
+ SER_milosevic_stays: "§YSlobodan Milošević does not leave office after the 2000 elections§!"
+ SER_milosevic_leaves: "§YSlobodan Milošević leaves office after the 2000 elections§!"
  ##########Misc##########
  SER_bulldozer_died: "The §HBulldozer Revolution§! must have been §RCrushed!§!"
  SER_bulldozer_revolution: "§RMilošević§! Must have been §ROverthrown§! in the §HBulldozer Revolution!§!"
@@ -298,7 +298,7 @@
  SER_ssd_command: "State Security Directorate"
  SER_rus_peacekeepers: "Russian Peacekeepers"
  ##########Tooltips##########
- SER_milosevic_dictatorship_tt: "Makes §YSlobodan Miloševic§! our leader for life!"
+ SER_milosevic_dictatorship_tt: "Makes §YSlobodan Milošević§! our leader for life!"
  ##########Events##########
  SerbiaFocus.7.t: "Fate of The Republika Srpska"
  SerbiaFocus.7.d: "We will hold our own referendum, under the guise of which we will separate the Republika Srpska from Bosnia and subjugate its government."
@@ -686,7 +686,7 @@
  SER_Defence_Contracts: "Defence Contracts"
  SER_Defence_Contracts_desc: "We shall sign contracts and secure some weapons. We've got a few companies in mind and we shall go contact them for deals."
   SER_market_oriented_reforms: "Market Oriented Reforms"
- SER_market_oriented_reforms_desc: "During the rule of Milošević, we were estranged from the international community thus resulting in an autarkical economy. Now that we aren't confined to the rules of socialism or held back by the radical agenda of Slobodan Miloševic that we may reform our market to fit the modern age."
+ SER_market_oriented_reforms_desc: "During the rule of Milošević, we were estranged from the international community thus resulting in an autarkical economy. Now that we aren't confined to the rules of socialism or held back by the radical agenda of Slobodan Milošević that we may reform our market to fit the modern age."
  SER_Vojvodina_Agriculture: "Vojvodina Agricultural Development"
  SER_Vojvodina_Agriculture_desc: "Vojvodina holds more than half of our agricultural lands, seeing as agriculture is the most important sector of the Serbian economy it is important that we cherish the agricultural development of this region."
  SER_crop_field_production: "Crop Field Production"
@@ -813,7 +813,7 @@
  SER_neutral_souverign: "Social Democracy in the Balkans"
  SER_neutral_souverign_desc: "We are in an environment where the west and east are trying to tug the rope and bend us to their side, but we will not be anyone's puppet! We will pursue our own multi-vector policy and ensure stability inside our country!"
  SER_socialist_party: "Socijalisticka partija Srbije"
- SER_socialist_party_desc: "Formerly, a party centered around Milosevic, now tries to shape it's new image and integrate into new democratic system. SPS was founded in 1990 as a merger of the League of Communists of Serbia and Socialist Alliance of Working People of Yugoslavia with Slobodan Miloševic as its first president."
+ SER_socialist_party_desc: "Formerly, a party centered around Milosevic, now tries to shape it's new image and integrate into new democratic system. SPS was founded in 1990 as a merger of the League of Communists of Serbia and Socialist Alliance of Working People of Yugoslavia with Slobodan Milošević as its first president."
  SER_popular_socialism: "Popular Socialism"
  SER_popular_socialism_desc: "Our new socialist agenda must be centered around our common folk. It is our duty to fulfill their expectations!"
  SER_implement_economic_regulations: "Economic Regulations"
