--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -1307,13 +1307,13 @@
  SER.Neutral_green_desc: "Green - Zeleni Srbije (Greens of Serbia). ZS is a green political party in Serbia. This party advocates environmental and ecological wisdom, social justice and solidarity, direct democracy, green economics, sustainability, respect for diversity and human rights, and prevention of all forms of violence."
  SER.neutral_Social: "£SER_neutral_Social Socijalistička Partija Srbije - §CDemocratic Wing§!"
  SER.neutral_Social_icon: "£SER_neutral_Social"
- SER.neutral_Social_desc: "Democratic Socialist - Socijalistička Partija Srbije (Socialist Party of Serbia). Though nominally a socialist party with left wing economics and direct ties to the old League of Communists of Serbia, under Slobodan Miloševic the party emerged as nationalist, isolationist and anti-western. After the fall of Milošević, the party has returned to its left wing roots, and even taken a pro-EU stance."
+ SER.neutral_Social_desc: "Democratic Socialist - Socijalistička Partija Srbije (Socialist Party of Serbia). Though nominally a socialist party with left wing economics and direct ties to the old League of Communists of Serbia, under Slobodan Milošević the party emerged as nationalist, isolationist and anti-western. After the fall of Milošević, the party has returned to its left wing roots, and even taken a pro-EU stance."
  SER.Neutral_Communism: "£SER_Neutral_Communism Savez Komunista Jugoslavije u Srbiji"
  SER.Neutral_Communism_icon: "£SER_Neutral_Communism"
  SER.Neutral_Communism_desc: "Communist - Savez Komunista Jugoslavije u Srbiji (League of Communists of Serbia) are the remnants of the Titois Yugoslavian League of Communists."
  SER.Nat_Populism: "£SER_Nat_Populism Socijalistička Partija Srbije"
  SER.Nat_Populism_icon: "£SER_Nat_Populism"
- SER.Nat_Populism_desc: "Right-Wing Populist - Socijalistička Partija Srbije (Socialist Party of Serbia). Though nominally a socialist party with left wing economics and direct ties to the old League of Communists of Serbia, under Slobodan Miloševic the party has emerged as nationalist, isolationist and anti-western. Promoting Serbian nationalism, it drove Yugoslavia apart, and sought to maximize Serbian gains in the resulting Yugoslav Wars by various means, including ethnic cleansing."
+ SER.Nat_Populism_desc: "Right-Wing Populist - Socijalistička Partija Srbije (Socialist Party of Serbia). Though nominally a socialist party with left wing economics and direct ties to the old League of Communists of Serbia, under Slobodan Milošević the party has emerged as nationalist, isolationist and anti-western. Promoting Serbian nationalism, it drove Yugoslavia apart, and sought to maximize Serbian gains in the resulting Yugoslav Wars by various means, including ethnic cleansing."
  SER.Nat_Populism_2017: "£SER_Nat_Populism_alt Srpski Pokret Dveri"
  SER.Nat_Populism_2017_icon: "£SER_Nat_Populism_alt"
  SER.Nat_Populism_2017_desc: "Right-Wing Populist - Srpski Pokret Dveri (Serbian Movement Dveri). Dveri is a right-wing to far-right political movement. Dveri were formed in 1999 as a Christian right-wing youth organisation gathered around the eponymous student magazine."
