fix servian kosovo uprising focus

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -10,6 +10,7 @@ v1.10.1
  Bugfixes:
   - Fixed all of the intro focuses bypassing for Serbia
   - USAID will cancel if the USA no longer exists
+  - Fixed kosovo uprising focus for Serbia having incorrect party checks
 
  Content:
   - The Communist Party of Cuba can now take the pro-LGBT policies
