--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -6929,7 +6929,7 @@
  MNT.Neutral_conservatism: "£MNT_non_aligned_conservative People's Party"
  MNT.Neutral_conservatism_icon: "£MNT_non_aligned_conservative"
  MNT.Neutral_conservatism_desc: ""
- MNT.neutral_Social: "£MNT_neutral_Social Socialist People's Party (SNP)"
+ MNT.neutral_Social: "£MNT_western_conservative Socialist People's Party (SNP)"
  MNT.neutral_Social_icon: "£MNT_western_conservative"
  MNT.neutral_Social_desc: ""
  MNT.Neutral_Communism: "£MNT_Neutral_Communism Workers' Party (RP)"
