--- a/localisation/english/equip_naval_l_english.yml
+++ b/localisation/english/equip_naval_l_english.yml
@@ -21,7 +21,7 @@
  missile_submarine: "Missile Submarines"
  missile_submarine_desc: "The silent killers of the worlds oceans, these undersea warfare platforms incorporate a range of useful abilities, including stealth, intelligence gathering, and weapon systems."
  battle_cruiser: "Battlecruisers"
- battle_cruiser_desc: "The Fitness Gram Pacer Test(TM) is a multi-stage aerobic capacity test that progressively gets more difficult as you continue."
+ battle_cruiser_desc: ""
  battle_cruiser_hull_1: "Battlecruisers"
  battle_cruiser_hull_1_desc: ""
  battle_cruiser_hull_2: "Battlecruisers"
