--- a/localisation/simp_chinese/MD_focus_DPR_LPR_HPR_OPR_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_DPR_LPR_HPR_OPR_l_simp_chinese.yml
@@ -111,7 +111,7 @@
  DPR_nov_army_desc: "我们将开始组建新俄罗斯统一部队。"
  DPR_nov_annex_opr: "将敖德萨共和国合并到新俄罗斯"
  DPR_nov_annex_opr_desc: "我们将通过纳入新共和国来扩大新俄罗斯。"
- DPR_nov_annex_hpr: "将敖德萨共和国合并到新俄罗斯"
+ DPR_nov_annex_hpr: "将哈尔科夫共和国合并到新俄罗斯"
  DPR_nov_annex_hpr_desc: "我们将通过纳入新共和国来扩大新俄罗斯。"
  DPR_territorial_defence: "建立国土防卫"
  DPR_territorial_defence_desc: "除了民兵之外，我们还借鉴乌克兰创建国土防御的做法来加强我们的边界和内部安全。"
