--- a/localisation/simp_chinese/MD_focus_EU_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_EU_l_simp_chinese.yml
@@ -57,7 +57,7 @@
  EUcheat.1.b: "所有欧盟成员国都会投反对票！"
  EUcheat.1.c: "停止作弊！"
  pro_european_campaign: "[EUU.GetFlag]亲欧洲"
- pro_european_campaign_desc: "所有§§C[EUU.GetFlag]欧洲联盟§!成员国的亲欧洲运动。\n\n§H所需条件：§!\n[!proeuro_euwide_button_click_enabled]\n§H效果：§!\n[!proeuro_euwide_button_click]\n"
+ pro_european_campaign_desc: "§C[EUU.GetFlag]欧洲联盟§!所有成员国的亲欧洲运动。\n\n§H所需条件：§!\n[!proeuro_euwide_button_click_enabled]\n§H效果：§!\n[!proeuro_euwide_button_click]\n"
  euroscepticism_campaign: "[EUU.GetFlag]欧洲怀疑主义"
  euroscepticism_campaign_desc: "§C[EUU.GetFlag]欧洲联盟§!所有成员国的欧洲怀疑主义运动。\n\n§H所需条件：§!\n[!euroscepticism_euwide_button_click_enabled]\n§H效果：§!\n[!euroscepticism_euwide_button_click]\n"
  root_pro_european_campaign: "[ROOT.GetFlag]亲欧洲"
@@ -1207,8 +1207,8 @@
  EU_parliament_PG_anarchist_communism_name_loc_key: "欧洲反资本主义左派"
  EU_parliament_PG_Conservative_name_loc_key: "反动主义者联盟"
  EU_parliament_PG_Autocracy_name_loc_key: "专制主义者联盟"
- EU_parliament_PG_Mod_Vilayat_e_Faqih_name_loc_key: "温和什叶派革命者联盟"
- EU_parliament_PG_Vilayat_e_Faqih_name_loc_key: "强硬什叶派革命者联盟"
+ EU_parliament_PG_Mod_Vilayat_e_Faqih_name_loc_key: "强硬派什叶派革命者联盟"
+ EU_parliament_PG_Vilayat_e_Faqih_name_loc_key: "强硬派什叶派革命者联盟"
  EU_parliament_PG_Kingdom_name_loc_key: "瓦哈比君主主义者联盟"
  EU_parliament_PG_Caliphate_name_loc_key: "圣战萨拉菲主义者联盟"
  EU_parliament_PG_Neutral_Muslim_Brotherhood_name_loc_key: "温和伊斯兰主义者联盟"
@@ -1231,7 +1231,7 @@
  EU_parliament_PG_2017_anarchist_communism_name_loc_key: "人民的时刻！"
  EU_parliament_PG_2017_Conservative_name_loc_key: "欧洲国家运动联盟"
  EU_parliament_PG_2017_Autocracy_name_loc_key: "专制主义者联盟"
- EU_parliament_PG_2017_Mod_Vilayat_e_Faqih_name_loc_key: "温和什叶派革命者联盟"
+ EU_parliament_PG_2017_Mod_Vilayat_e_Faqih_name_loc_key: "强硬派什叶派革命者联盟"
  EU_parliament_PG_2017_Vilayat_e_Faqih_name_loc_key: "强硬派什叶派革命者联盟"
  EU_parliament_PG_2017_Kingdom_name_loc_key: "瓦哈比君主主义者联盟"
  EU_parliament_PG_2017_Caliphate_name_loc_key: "圣战萨拉菲主义者联盟"
