--- a/localisation/simp_chinese/MD_focus_PER_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_PER_l_simp_chinese.yml
@@ -2425,7 +2425,7 @@
  PER_two_billion_weekly_income_TT: "我们将在二年中从§Y[IRQ.GetFlag][IRQ.GetName]§!收到§G+2B现金§!。"
  PER_reorganize_school_1: "伊朗大学入学考试危机"
  PER_IBRC: "伊朗生物资源中心"
- PER_reorganize_school_1_desc: "伊朗大学入学考试是伊朗学生进入高等教育所需的综合全国入学考试。虽然它最初是为了确保“大学伊斯兰化”而创建的，但现在它已成为那些寻求技术职业的人的障碍，并导致越来越多的学生出国留学，并最终留在国外，减少了国内技术人才的数量 国内的专业人士。\n§W--------------§!\n如果我们完成§Y重组考试委员会§!或§Y废除伊朗大学入学考试制度§!国策，这个国家精神将被§R移除§!"
+ PER_reorganize_school_1_desc: "伊朗大学入学考试是伊朗学生进入高等教育所需的综合全国入学考试。虽然它最初是为了确保“大学伊斯兰化”而创建的，但现在它已成为那些寻求技术职业的人的障碍，并导致越来越多的学生出国留学，并最终留在国外，减少了国内技术专业人才的数量。\n§W--------------§!\n如果我们完成§Y重组考试委员会§!或§Y废除伊朗大学入学考试制度§!国策，这个国家精神将被§R移除§!"
  PER_reorganize_school_2: "伊朗大学入学考试改革"
  PER_reorganize_school_2_desc: "我们彻底改革了伊朗大学入学考试，尽管我们的学校里不再有认同我们国家意识形态的学生，但最终这是最好的。"
  PER_reorganize_school_3: "伊朗大学入学考试部分改革"
@@ -5506,6 +5506,6 @@
  PER_attack_irgc_south_khorasan_1: "在南呼罗珊攻击伊斯兰革命卫队"
  PER_attack_irgc_razavi_khorasan_1: "在礼萨呼罗珊攻击伊斯兰革命卫队"
  PER_high_inbreeding: "脸皮厚，血脉更浓"
- PER_high_inbreeding_desc: "‘§H仅限家中§!’\n既然可以走到走廊上做爱，为什么还要走到街上呢？在拉什特，家庭闹剧比千禧黎明的俄罗斯国策树还要复杂！我叔叔过去常说，女人就像咖啡，又热又湿，就像我的奶奶一样。"
+ PER_high_inbreeding_desc: "‘§H家事不出门§!’\n既然可以走到走廊上做爱，为什么还要走到街上呢？在拉什特，家庭闹剧比千禧黎明的俄罗斯国策树还要复杂！我叔叔过去常说，女人就像咖啡，又热又湿，就像我的奶奶一样。"
  PER_incompetant_joint_chiefs_of_staff: "参谋长联席会议无能"
  PER_incompetant_joint_chiefs_of_staff_desc: "伊朗第二次革命后，伊朗军队及其参谋长联席会议的无能暴露无遗。这有几个原因，其中之一就是伊朗军队被分成两支部队。领导能力的缺乏和明显的无能给指挥结构带来了巨大压力，并将使任何类型的行动都成为一场后勤噩梦。\n§W--------------§!\n如果我们完成§H战争大学§!国策，该国家精神将被§R移除§!"
