--- a/localisation/simp_chinese/replace/replaced_from_vanilla_research_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/replaced_from_vanilla_research_l_simp_chinese.yml
@@ -43,5 +43,5 @@
  CAT_air_doctrine: "空军学说"
  CAT_land_doctrine: "陆军学说"
  CAT_industry: "工业"
- CAT_encryption_tech: "加密"
- CAT_decryption_tech: "解密"
+ CAT_encryption_tech: "加密科技"
+ CAT_decryption_tech: "解密科技"
