--- a/localisation/simp_chinese/MD_defence_companies_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_defence_companies_l_simp_chinese.yml
@@ -14,8 +14,8 @@
  AST_thales_australia_tank_manufacturer: "泰雷兹澳大利亚"
  AUS_steyr_mannlicher_materiel_manufacturer: "斯泰尔-曼利夏"
  AUS_general_dynamics_steyr_tank_manufacturer: "通用动力斯泰尔"
- AZE_azerbaijani_defense_industry_materiel_manufacturer: "阿塞拜疆国防工业"
- AZE_azerbaijani_defense_industry_tank_manufacturer: "阿塞拜疆国防工业"
+ AZE_azerbaijani_defense_industry_materiel_manufacturer: "阿塞拜疆国防工业 - 材料部门"
+ AZE_azerbaijani_defense_industry_tank_manufacturer: "阿塞拜疆国防工业 - 装甲部门"
  BEL_fn_herstal_materiel_manufacturer: "埃斯塔勒国营工厂"
  BEL_cmi_defence_tank_manufacturer: "CMI防务"
  BEL_sabiex_international_tank_manufacturer: "赛贝斯国际"
@@ -27,13 +27,13 @@
  BRA_embraer_aircraft_manufacturer: "巴西航空工业公司"
  BRA_arsenal_do_marinha_naval_manufacturer: "海军兵工厂"
  BUL_arsenal_materiel_manufacturer: "兵工厂"
- BRM_burma_defence_industries_materiel_manufacturer: "缅甸国防工业"
- BRM_burma_defence_industries_tank_manufacturer: "缅甸国防工业"
+ BRM_burma_defence_industries_materiel_manufacturer: "缅甸国防工业 - 材料部门"
+ BRM_burma_defence_industries_tank_manufacturer: "缅甸国防工业 - 装甲部门"
  CAN_diemaco_materiel_manufacturer: "迪玛科"
  CAN_general_dynamics_land_systems_tank_manufacturer: "通用动力陆地系统"
  CAN_marine_industries_limited_naval_manufacturer: "海洋工业有限公司"
- CHI_norinco_tank_manufacturer: "北方工业公司"
- CHI_norinco_materiel_manufacturer: "北方工业公司"
+ CHI_norinco_tank_manufacturer: "北方工业公司 - 装甲部门"
+ CHI_norinco_materiel_manufacturer: "北方工业公司 - 材料部门"
  CHI_inner_mongolia_first_machinery_tank_manufacturer: "内蒙古第一机械厂"
  CHI_chengdu_aircraft_corp_aircraft_manufacturer: "成都飞机公司"
  CHI_shenyang_aircraft_corp_aircraft_manufacturer: "沈阳飞机工业集团"
@@ -42,8 +42,8 @@
  CHI_changhe_aircraft_corp_tank_manufacturer: "昌河飞机公司"
  CHI_china_state_shipbuilding_corporation_naval_manufacturer: "中国船舶工业集团"
  CHI_china_shipbuilding_industry_corporation_naval_manufacturer: "中国船舶重工集团"
- CHL_famae_materiel_manufacturer: "智利陆军军工厂"
- CHL_famae_tank_manufacturer: "智利陆军军工厂"
+ CHL_famae_materiel_manufacturer: "智利陆军军工厂 - 材料部门"
+ CHL_famae_tank_manufacturer: "智利陆军军工厂 - 装甲部门"
  CHL_enaer_aircraft_manufacturer: "智利国家航空公司"
  CHL_asmar_naval_manufacturer: "智利海军造船厂"
  COL_indumil_materiel_manufacturer: "哥伦比亚军事工业公司"
@@ -53,11 +53,11 @@
  CZE_aero_aircraft_manufacturer: "沃多乔迪航空公司"
  CZE_czub_materiel_manufacturer: "捷克兵工厂"
  CZE_vop_tank_manufacturer: "军工维修公司"
- DEN_falck_schmidt_tank_manufacturer: "福.施密特"
- DEN_falck_schmidt_materiel_manufacturer: "福.施密特"
+ DEN_falck_schmidt_tank_manufacturer: "福.施密特 - 装甲部门"
+ DEN_falck_schmidt_materiel_manufacturer: "福.施密特 - 材料部门"
  DEN_naval_manufacturer_maersk: "马士基"
- EGY_kader_factory_tank_manufacturer: "开达工厂"
- EGY_kader_factory_materiel_manufacturer: "开达工厂"
+ EGY_kader_factory_tank_manufacturer: "开达工厂 - 装甲部门"
+ EGY_kader_factory_materiel_manufacturer: "开达工厂 - 材料部门"
  EGY_helwan_machine_tools_tank_manufacturer: "赫万机床"
  EGY_maadi_arms_materiel_manufacturer: "马迪兵工厂"
  EGY_abhco_tank_manufacturer: "阿拉伯英国直升机公司"
@@ -78,8 +78,8 @@
  GEO_tbilisi_aircraft_manufacturing_tank_manufacturer: "第比利斯飞机制造厂"
  GEO_tbilisi_aircraft_manufacturing_materiel_manufacturer: "第比利斯飞机制造厂"
  GER_krauss_maffei_tank_manufacturer: "克劳斯-玛菲"
- GER_rheinmetall_materiel_manufacturer: "莱茵金属"
- GER_rheinmetall_tank_manufacturer: "莱茵金属"
+ GER_rheinmetall_materiel_manufacturer: "莱茵金属 - 材料部门"
+ GER_rheinmetall_tank_manufacturer: "莱茵金属 - 装甲部门"
  GER_heckler_koch_materiel_manufacturer: "黑克勒&科赫"
  GER_airbus_defence_aircraft_manufacturer: "空中客车防务"
  GER_airbus_helicopters_tank_manufacturer: "空中客车直升机公司"
