SOV and CAN ics

--- a/localisation/english/MD_focus_SOV_l_english.yml
+++ b/localisation/english/MD_focus_SOV_l_english.yml
@@ -4199,6 +4199,8 @@
  SOV_secure_the_FSB_desc: "FSB or Federal Security Service is one of the main pro-Putin powers in the Kremlin. A purge would help us to get rid of another pillar of Putinism."
  SOV_crush_putinism: "Crush Putinism"
  SOV_crush_putinism_desc: "Old Putinist policies cannot be used anymore as well as the ideology."
+ SOV_western_russia: "New Wave in Old Style"
+ SOV_western_russia_desc: "Current political realities have led to the fact that the past ruling party has again won the elections! However, the main difference from the previous term is the dominance of the reformist faction, whose goal is to reform the system so that it would not be ashamed to cooperate with democratic countries."
  SOV_enforce_liberal_values: "Liberal Values Superiority"
  SOV_enforce_liberal_values_desc: "Liberalism is the key to Russian freedom and success. We need to preserve this ideology further and make Russia great again."
  SOV_focus_on_economy: "Russian Economic Miracle"
