--- a/localisation/english/MD_focus_IRQ_l_english.yml
+++ b/localisation/english/MD_focus_IRQ_l_english.yml
@@ -2145,3 +2145,8 @@
  Cat_NAVAL_EQP: "Naval Equipment"
  Cat_BM: "Ballistic Missiles"
  Cat_satellite: "Sattelites"
+ CAT_ai_research: "AI Tech"
+ CAT_nfibers_research: "Nanofibers Tech"
+ CAT_3d_research: "3D Tech"
+ CAT_internet_tech_research: "Internet Tech"
+ CAT_computing_tech_research: "Computing Tech"
