--- a/Changelog.txt
+++ b/Changelog.txt
@@ -11,6 +11,8 @@ v1.10.1
   - Fixed all of the intro focuses bypassing for Serbia
   - USAID will cancel if the USA no longer exists
   - Fixed kosovo uprising focus for Serbia having incorrect party checks
+  - Fixed several localization errors in the Iraqi tree
+  - Fixed missing bypasses in the "Era of Saddam" focuses for Iraq
 
  Content:
   - The Communist Party of Cuba can now take the pro-LGBT policies
