--- a/Changelog.txt
+++ b/Changelog.txt
@@ -13,6 +13,8 @@ v1.10.1
   - Fixed kosovo uprising focus for Serbia having incorrect party checks
   - Fixed several localization errors in the Iraqi tree
   - Fixed missing bypasses in the "Era of Saddam" focuses for Iraq
+  - The Kuwait Naval base will now be given to Iraq if they win the war against the U.S.
+  - Fixed an issue with the Iranian parliament event firing twice
 
  Content:
   - The Communist Party of Cuba can now take the pro-LGBT policies
