--- a/localisation/english/MD_focus_BLR_l_english.yml
+++ b/localisation/english/MD_focus_BLR_l_english.yml
@@ -1276,6 +1276,22 @@
  SER_serbia_readys_union_state: "§YPercentage§! of §Y[SER.GetNameWithFlag]§! readiness to integrate into the §YUnion State§!"
  SER_serbia_notreadys_union_state: "§RUNAVAILABLE§!"
  SER_union_state_flag: "[SER.GetFlag]"
+
+
+ #ISRAEL
+ unionstate_israel_tooltip: "[israel_readys_union_state]"
+ unionstate_israel_output_text: "[israel_ready_union_state]"
+ ISR_israel_ready_union_state: "§Y[?ISR.union_state|-0]§!"
+ ISR_israel_readys_union_state: "§YPercentage§! of §Y[ISR.GetNameWithFlag]§! readiness to integrate into the §YUnion State§!"
+ ISR_israel_notreadys_union_state: "§RUNAVAILABLE§!"
+
+
+ #UKRAINE
+ unionstate_ukraine_tooltip: "[ukraine_readys_union_state]"
+ unionstate_ukraine_output_text: "[ukraine_ready_union_state]"
+ UKR_ukraine_ready_union_state: "§Y[?UKR.union_state|-0]§!"
+ UKR_ukraine_readys_union_state: "§YPercentage§! of §Y[UKR.GetNameWithFlag]§! readiness to integrate into the §YUnion State§!"
+ UKR_ukraine_notreadys_union_state: "§RUNAVAILABLE§!"
  #Ideas
  UNION_blr_citizen: "§4Integration of the Union State§!: Single Citizenship"
  UNION_sov_citizen: "§4Integration of the Union State§!: Single Citizenship"
