Fixed UAR autonomies

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -15,6 +15,7 @@ v1.10.1
   - Fixed missing bypasses in the "Era of Saddam" focuses for Iraq
   - The Kuwait Naval base will now be given to Iraq if they win the war against the U.S.
   - Fixed an issue with the Iranian parliament event firing twice
+  - Fixed United Arab Republic autonomies disappearing after uniting it
 
  Content:
   - The Communist Party of Cuba can now take the pro-LGBT policies
