--- a/localisation/english/MD_subparty_policies_l_english.yml
+++ b/localisation/english/MD_subparty_policies_l_english.yml
@@ -9,7 +9,7 @@
  generic_focus_on_civilian_sector: "Focus on the Civilian Sector"
  generic_focus_on_civilian_sector_desc: "The greatest effort should be put on manufacturing basic consumer goods, appliances and utilities for the good of our people. If we expand our ports, we can also sell our products to the dirty capitalists and steal the money of those imperialists."
  generic_focus_on_military_infrastructure: "Focus on Military Infrastructure"
- generic_focus_on_military_infrastructure_desc: "Fight for the workers is an eternal war. We might be invaded by the capitalistic pigs at any time and we need to prepare our country to maximise the effectiveness of our military operations."
+ generic_focus_on_military_infrastructure_desc: Fight for the workers is an eternal war. We might be invaded by the capitalist pigs at any time and we need to prepare our country to maximise the effectiveness of our military operations."
  generic_focus_on_military_production: "Focus on Armament Production"
  generic_focus_on_military_production_desc: "The factory workers and labourers can't fight without weapons! We need to build more arms factories so that every patriotic citizen will be able to fight our enemies."
  generic_focus_on_naval_expansion: "Focus on Naval Buildup"
