IRQ focus icon fix

--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -843,8 +843,8 @@
  IRQ.liberalism_2017: "£IRQ_liberalism_2017_small Iraqi National Movement"
  IRQ.liberalism_2017_icon: "£IRQ_liberalism_2017_small"
  IRQ.liberalism_2017_desc: "Liberal - The Iraqi National Movement was a coalition founded on the basis of secularism and non-sectarianism, with a mix of some Iraqi Nationalism. It is comprised of some of Iraq's largest secular parties, including Al Wataniya."
- IRQ.socialism: "£IRQ_national_congressa Al-Moutammar Al-Watani"
- IRQ.socialism_icon: "£IRQ_national_congressa"
+ IRQ.socialism: "£IRQ_national_congress_small Al-Moutammar Al-Watani"
+ IRQ.socialism_icon: "£IRQ_national_congressa_small"
  IRQ.socialism_desc: "Welfare State - The Iraqi National Congress was formed following the Persian Gulf War as an umbrella organization in order to resist the Ba'athist order in Iraq. The group was funded by the United States, and it consisted of Shi'ites, former Military Officers, Liberals, Socialists and many other political and ethnic groups."
  IRQ.conservatism: "£IRQ_conservatism_small"
  IRQ.conservatism_icon: "£IRQ_conservatism_small"
