legco seats calculate I HATE CALCULATE

--- a/localisation/english/MD_focus_HKG_l_english.yml
+++ b/localisation/english/MD_focus_HKG_l_english.yml
@@ -260,19 +260,19 @@
 
  #Ideas
  HKG_unrestricted_housing_market: "Unrestricted Housing Market"
- HKG_unrestricted_housing_market_desc: "WIP"
+ HKG_unrestricted_housing_market_desc: ""
  HKG_victoria_harbour: "Victoria Harbour"
- HKG_victoria_harbour_desc: "WIP"
+ HKG_victoria_harbour_desc: ""
  HKG_victoria_harbour_expand_desc: ""
  HKG_victoria_harbour_expand_plus_desc: ""
  legacy_of_handover_hong_kong: "Legacy of Handover Hong Kong"
- legacy_of_handover_hong_kong_desc: "WIP"
+ legacy_of_handover_hong_kong_desc: ""
  disloyal_heung_yee_kuk: "Disloyal Heung Yee Kuk"
- disloyal_heung_yee_kuk_desc: "WIP"
+ disloyal_heung_yee_kuk_desc: ""
  corrupt_politicians: "Corrupt Politicians"
- corrupt_politicians_desc: "WIP"
+ corrupt_politicians_desc: ""
  HKG_victoria_harbour: "Victoria Harbour"
- HKG_victoria_harbour_desc: "WIP"
+ HKG_victoria_harbour_desc: ""
  Basic_Law_HKG: "The Basic Law of Hong Kong SAR"
  Basic_Law_milltary_HKG: "The Basic Law of Hong Kong SAR"
  Basic_Law_milltary_HKG_desc: ""
@@ -327,6 +327,8 @@
  legco_approvement_seats: "Approval: §G[?legco_approval_seats]§!"
  legco_opposition_seats: "Negative: §R[?legco_negative_seats]§!"
  legco_total_seats: "Total: §Y[?legco_total_seats]§!"
+ legco_election_seats: "§CPro-establishment Camp§! Seats: §C[?legco_PE_seats]§!\n§8Pan-democracy Camp§! Seats: §8[?legco_PD_seats]§!\n§GLocalist Camp§! Seats: §G[?legco_LC_seats]§!"
+
 
  legco_motion_vote_supports_tt: "§CPro-establishment Camp§! Supports: [?legco_PE_temp_support|2%](§C[?legco_PE_support|0]/[?legco_PE_seats|0]§!)\n§8Pan-democracy Camp§! Supports: [?legco_PD_temp_support|2%](§8[?legco_PD_support|0]/[?legco_PD_seats|0]§!)\n§GLocalist Camp§! Support: [?legco_LC_temp_support|2%](§G[?legco_LC_support|0]/[?legco_LC_seats|0]§!)"
  legco_motion_title: "Current Motion: "
