Lots of bugfixing
-Added missing general dynamic land systems MIO for APC
-Fixed errors with US carriers models 2005-2045
-Fixed other errors linked to old ship models
-Fixed multiple errors linked to the tank designer gfx/model library

--- a/localisation/simp_chinese/MD_defence_companies_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_defence_companies_l_simp_chinese.yml
@@ -270,6 +270,7 @@
  USA_boeing_aircraft_manufacturer: "波音"
  USA_colt_defense_materiel_manufacturer: "柯尔特防务"
  USA_consolidated_robotics_materiel_manufacturer: "联合机器人公司"
+ USA_general_dynamics_APC_manufacturer: "通用动力-C"
  USA_general_dynamics_materiel_manufacturer: "通用动力"
  USA_general_dynamics_tank_manufacturer: "通用动力"
  USA_general_dynamics_electric_boat_naval_manufacturer: "通用动力电船公司"
