--- a/localisation/russian/MD_defence_companies_l_russian.yml
+++ b/localisation/russian/MD_defence_companies_l_russian.yml
@@ -271,8 +271,9 @@
  USA_boeing_aircraft_manufacturer: "Boeing"
  USA_colt_defense_materiel_manufacturer: "Colt Defense"
  USA_consolidated_robotics_materiel_manufacturer: "Consolidated Robotics"
- USA_general_dynamics_materiel_manufacturer: "General Dynamics"
- USA_general_dynamics_tank_manufacturer: "General Dynamics"
+ USA_general_dynamics_APC_manufacturer: "GDLS-C"
+ USA_general_dynamics_materiel_manufacturer: "GDLS"
+ USA_general_dynamics_tank_manufacturer: "GDLS"
  USA_general_dynamics_electric_boat_naval_manufacturer: "General Dynamics Electric Boat"
  USA_bath_iron_works_naval_manufacturer: "Bath Iron Works"
  USA_national_steel_and_shipbuilding_company_naval_manufacturer: "National Steel and Shipbuilding Company"
