--- a/localisation/english/equipment_l_english.yml
+++ b/localisation/english/equipment_l_english.yml
@@ -1725,10 +1725,10 @@
  FRA_infantry_weapons4_desc: "The FAMAS Félin for 'Infantryman with Equipment and Integrated Links' add a vertical handle at the front with command for the radio and the new thermal scope."
  FRA_infantry_weapons5: "HK416F" #F for French variant
  FRA_infantry_weapons5_desc: "The weapons is a French mix of the HK416 and the HK416A5 declined in 2 variants, a standard one and a short one."
- FRA_infantry_weapons6: "AIF 30" #Project Name
- FRA_infantry_weapons6_desc: "AIF 30 for Futur Individual Weapon for 2030 France get back to a national manufacturer who developed a gun inspired by the previous FAMAS Model."
+ FRA_infantry_weapons6: "HK416FM 6.8" #Project Name
+ FRA_infantry_weapons6_desc: ""
  FRA_infantry_weapons7: "AIF 40" #Project Name
- FRA_infantry_weapons7_desc: "AIF 40 is a new improvement of the previous AIF 30."
+ FRA_infantry_weapons7_desc: ""
 
  FRA_APC_1: "AMX-VTT"
  FRA_APC_1_short: "AMX-VTT"
