--- a/localisation/french/equipment_l_french.yml
+++ b/localisation/french/equipment_l_french.yml
@@ -1488,10 +1488,10 @@
  FRA_infantry_weapons4_desc: "Le FAMAS Félin pour « fantassin avec équipement et liaisons intégrées » ajoute une poignée verticale à l'avant avec commande pour la radio et la nouvelle lunette thermique."
  FRA_infantry_weapons5: "HK416F"
  FRA_infantry_weapons5_desc: "L'arme est un mélange français du HK416 et du HK416A5 décliné en 2 variantes, une standard et une courte."
- FRA_infantry_weapons6: "AIF 30"
- FRA_infantry_weapons6_desc: "Avec l'AIF 30 pour « arme individuelle future de 2030 », la France renoue avec un fabricant national qui a développé une arme inspirée du précédent modèle FAMAS."
+ FRA_infantry_weapons6: "HK416FM 6.8"
+ FRA_infantry_weapons6_desc: ""
  FRA_infantry_weapons7: "AIF 40"
- FRA_infantry_weapons7_desc: "L'AIF 40 est une nouvelle amélioration de l'AIF 30 précédente."
+ FRA_infantry_weapons7_desc: ""
  FRA_APC_1: "AMX-VTT"
  FRA_APC_1_short: "AMX-VTT"
  FRA_APC_2: "Véhicule à l'avant blindé"
