--- a/localisation/simp_chinese/equipment_l_simp_chinese.yml
+++ b/localisation/simp_chinese/equipment_l_simp_chinese.yml
@@ -1477,10 +1477,10 @@
  FRA_infantry_weapons4_desc: "法玛斯 Felin为“步兵综合连接设备”添加了一个前部垂直把手，操控无线电和热感应部件"
  FRA_infantry_weapons5: "HK416F"
  FRA_infantry_weapons5_desc: "这种武器是HK416和HK416A5的法国混合物，有2个改型，一个标准和一个短改型"
- FRA_infantry_weapons6: "AIF 30"
- FRA_infantry_weapons6_desc: "2030年，法国未来个人武器由一个国家制造商制造，它开发了一种枪，灵感来自于以前的法玛斯型号AIF30"
+ FRA_infantry_weapons6: "HK416FM 6.8"
+ FRA_infantry_weapons6_desc: ""
  FRA_infantry_weapons7: "AIF 40"
- FRA_infantry_weapons7_desc: "AIF40是之前AIF30的一个新改型"
+ FRA_infantry_weapons7_desc: ""
  FRA_APC_1: "AMX-VTT"
  FRA_APC_1_short: "AMX-VTT"
  FRA_APC_2: "VAB装甲运输车"
