--- a/localisation/russian/equipment_l_russian.yml
+++ b/localisation/russian/equipment_l_russian.yml
@@ -1838,10 +1838,10 @@
  FRA_infantry_weapons4_desc: "FAMAS Félin для "Пехотинца с оборудованием и интегрированными связями" добавляет вертикальную ручку спереди с командой для радио и нового теплового прицела."
  FRA_infantry_weapons5: "HK416F" #F for French variant
  FRA_infantry_weapons5_desc: "Оружие представляет собой французскую смесь HK416 и HK416A5, уменьшенную в 2 вариантах: стандартном и коротком."
- FRA_infantry_weapons6: "AIF 30" #Project Name
- FRA_infantry_weapons6_desc: "AIF 30 от Futur Individual Weapon, на 2030 год Франция возвращается к национальному производителю, который разработал оружие, вдохновившись предыдущей моделью FAMAS."
+ FRA_infantry_weapons6: "HK416FM 6.8" #Project Name
+ FRA_infantry_weapons6_desc: ""
  FRA_infantry_weapons7: "AIF 40" #Project Name
- FRA_infantry_weapons7_desc: "AIF 40 - это новое усовершенствование предыдущего AIF 30."
+ FRA_infantry_weapons7_desc: ""
 
  FRA_APC_1: "AMX-VTT"
  FRA_APC_1_short: "AMX-VTT"
