--- a/localisation/english/MD_focus_IRQ_l_english.yml
+++ b/localisation/english/MD_focus_IRQ_l_english.yml
@@ -1487,6 +1487,7 @@
  iraq_yearly.3.a: "Respond Now!"
  iraq_yearly.3.b: "I Don't Care"
  # Ideas
+ IRQ_controlled_instability_idea: "Controlled Instability"
  IRQ_nuclear_experts: "Nuclear Experts"
  IRQ_conventional_focus: "Conventional Focus"
  IRQ_baath_equilibrium: "Shockwaves of Ba'athism"
@@ -2150,3 +2151,4 @@
  CAT_3d_research: "3D Tech"
  CAT_internet_tech_research: "Internet Tech"
  CAT_computing_tech_research: "Computing Tech"
+ IRQ_mek_revolted_already: "MEK Revolted Already"
