--- a/localisation/english/MD_new_traits_l_english.yml
+++ b/localisation/english/MD_new_traits_l_english.yml
@@ -39,7 +39,7 @@
  sly_desc: "Is known to use unconventional and subtle methods to get their way."
  narcissist: "Narcissist"
  narcissist_desc: "Narcissists are known to mainly care about themselves and their personal perception."
- tech_savy: "Tech-savy"
+ tech_savy: "Tech-savvy"
  tech_savy_desc: "Is at the forefront of knowledge about new technology."
  polished: "Polished"
  polished_desc: "Are flawless in presenting themselves on the political stage."
