--- a/Changelog.txt
+++ b/Changelog.txt
@@ -17,6 +17,7 @@ v1.10.1
   - The Kuwait Naval base will now be given to Iraq if they win the war against the U.S.
   - Fixed an issue with the Iranian parliament event firing twice
   - Fixed United Arab Republic autonomies disappearing after uniting it
+  - Fixed a bug with the U.S. not being able to annex its puppets
 
  Content:
   - The Communist Party of Cuba can now take the pro-LGBT policies
