--- a/localisation/english/MD_focus_HKG_l_english.yml
+++ b/localisation/english/MD_focus_HKG_l_english.yml
@@ -359,26 +359,26 @@
  #DYNAMIC MODIFIERS
  #Housing Issue
  UHM_dynamic_modifies_TT: "\nModify §Y$HKG_unrestricted_housing_market$§! by"
- UHM_update_pp_cost_TT: "Political Power Cost: [?UHM_political_power_cost_var|+]"
- UHM_update_stability_factor_TT: "Stability: [?UHM_stability_factor_var|+%]"
- UHM_update_stability_weekly_TT: "Weekly Stability: [?UHM_stability_weekly_var|+%]"
- UHM_update_monthly_population_TT: "Monthly Population: [?UHM_monthly_population_var|+%]"
- UHM_update_democratic_drift_TT: "Daily Western Support: [?UHM_democratic_drift_var|+]"
- UHM_update_communism_drift_TT: "Daily Emerging Support: [?UHM_communism_drift_var|+]"
- UHM_update_nationalist_drift_TT: "Daily Nationalist Support: [?UHM_nationalist_drift_var|+]"
- UHM_update_consumer_goods_factor_TT: "Tax Cost: §Y[?UHM_consumer_goods_factor_var|%]§!"
- UHM_update_buildings_speed_TT: "Construction Speed: [?UHM_buildings_speed_var|+%]"
- UHM_update_industry_free_repair_TT: "Free Repair: [?UHM_industry_free_repair_var|+%]"
+ UHM_update_pp_cost_TT: "$MODIFIER_POLITICAL_POWER_COST$: [?UHM_political_power_cost_var|+]"
+ UHM_update_stability_factor_TT: "$MODIFIER_STABILITY_FACTOR$: [?UHM_stability_factor_var|+%]"
+ UHM_update_stability_weekly_TT: "$MODIFIER_STABILITY_WEEKLY$: [?UHM_stability_weekly_var|+%]"
+ UHM_update_monthly_population_TT: "$MODIFIER_GLOBAL_MONTHLY_POPULATION$: [?UHM_monthly_population_var|+%]"
+ UHM_update_democratic_drift_TT: "$democratic_drift$: [?UHM_democratic_drift_var|+]"
+ UHM_update_communism_drift_TT: "$communism_drift$: [?UHM_communism_drift_var|+]"
+ UHM_update_nationalist_drift_TT: "$nationalist_drift$: [?UHM_nationalist_drift_var|+]"
+ UHM_update_consumer_goods_factor_TT: "$MODIFIER_CONSUMER_GOODS_FACTOR$: §Y[?UHM_consumer_goods_factor_var|%]§!"
+ UHM_update_buildings_speed_TT: "$MODIFIER_PRODUCTION_SPEED_BUILDINGS_FACTOR$: [?UHM_buildings_speed_var|+%]"
+ UHM_update_industry_free_repair_TT: "$MODIFIER_INDUSTRY_REPAIR_FACTOR$: [?UHM_industry_free_repair_var|+%]"
  #Triad
  triads_dynamic_modifies_TT: "\nModify §Y$HKG_triads_dynamic_modifier$§! by"
- triads_update_pp_cost_TT: "Political Power Cost: [?triads_political_power_cost_var|+]"
- triads_update_stability_factor_TT: "Stability: [?triads_stability_factor_var|+%]"
- triads_update_stability_weekly_TT: "Weekly Stability: [?triads_stability_weekly_var|+%]"
- triads_update_trade_opinion_TT: "Trade deal opinion factor: [?triads_trade_opinion_factor_temp_var|Y%]"
- triads_update_democratic_drift_TT: "Daily Western Support: [?triads_democratic_drift_var|+]"
- triads_update_communism_drift_TT: "Daily Emerging Support: [?triads_communism_drift_var|+]"
- triads_update_nationalist_drift_TT: "Daily Nationalist Support: [?triads_nationalist_drift_var|+]"
- triads_update_corruption_cost_factor_var_TT: "Cost to change Corruption: [?triads_corruption_cost_factor_var|+]"
+ triads_update_pp_cost_TT: "$MODIFIER_POLITICAL_POWER_COST$: [?triads_political_power_cost_var|+]"
+ triads_update_stability_factor_TT: "$MODIFIER_STABILITY_FACTOR$: [?triads_stability_factor_var|+%]"
+ triads_update_stability_weekly_TT: "$MODIFIER_STABILITY_WEEKLY$: [?triads_stability_weekly_var|+%]"
+ triads_update_trade_opinion_TT: "$MODIFIER_TRADE_OPINION_FACTOR$: [?triads_trade_opinion_factor_temp_var|Y%]"
+ triads_update_democratic_drift_TT: "$democratic_drift$: [?triads_democratic_drift_var|+]"
+ triads_update_communism_drift_TT: "$communism_drift$: [?triads_communism_drift_var|+]"
+ triads_update_nationalist_drift_TT: "$nationalist_drift$: [?triads_nationalist_drift_var|+]"
+ triads_update_corruption_cost_factor_var_TT: "$corruption_cost_factor$: [?triads_corruption_cost_factor_var|+]"
  
  HKG_triad_evidance: "Triad's Criminal Evidence"
  HKG_triad_strength: "Triad's Strength"
@@ -398,6 +398,9 @@
  hongkong.10.a: "Hong Kong's electoral system will maintain the status quo."
  hongkong.10.b: "We don't quite agree with directly universal suffrage, but we'll support some gradual and orderly electoral reforms."
  hongkong.10.c: "Might as well get radical and just allow universal suffrage!"
+ hongkong_legco.1.t: "The Seats of [GetYear] LegCo"
+ hongkong_legco.1.d: "Here is the calculate event for the seats of LegCo.\n<WIP>"
+ hongkong_legco.1.a: "Got it."
  hongkong_news.4.t: "123 Democratic Alliance is disbanded today."
  hongkong_news.4.d: "Established in 1994 by a group of pro-Taiwan, pro-democracy and pro-business politicians, the 123 Democratic Alliance was dissolved because lacking of financial support from the Taiwan government, after the Kuomintang's defeat in its presidential election."
  hongkong_news.4.a: "A good news, isn't it?"
