Chechens now help Saddam

--- a/localisation/english/MD_focus_SUB_l_english.yml
+++ b/localisation/english/MD_focus_SUB_l_english.yml
@@ -209,6 +209,7 @@
  SOV_subject_prepare_to_war: "Announce Preparations For War"
  TAT_tatneft_tech: "Tatneft Tech Center"
  SUB_tat_metro: "Metro"
+ SUB_volunteer_idea: "The Military Campaign in §YIraq§!"
  SUB_communism_politic: "Federal Political System:§YReactionary§!"
  SUB_communism_politic_desc: "In our country, the subjects also influence the policy of the state, depending on which party is the ruling party in the subject. Monthly increases the popularity of §Yreactionary§! parties in Russia by: §G+0.01§!"
  SUB_nationalist_politic: "Federal Political System:§YNationalist§!"
@@ -658,6 +659,7 @@
  SOV_added_gudermez1: "§YSend soldiers§! for training in the §Y[CHE.GetFlag]Chechen§! Gudermes"
  SOV_added_kharkivz: "§YIntegrate§! the §Y[HPR.GetFlag]Kharkiv§! Defense Concern"
  SOV_added_kharkivz1: "§YIntegrate§! the §Y[HPR.GetFlag]Kharkiv§! Defense Concern"
+ SOV_che_help_iraq: "Sending §Y[CHE.GetFlag]Chechens§! to §Y[IRQ.GetFlag]Iraq§!"
 
  BSH_subject_aes: "Request Permission For The Construction of The Bashkir NPP"
  BSH_unite_idel_ural: "Request For The Creation Of Idel-Ural"
