European Union Improvements/Minor Bug fixes

--- a/localisation/english/replace/replaced_from_vanilla_modifiers_l_english.yml
+++ b/localisation/english/replace/replaced_from_vanilla_modifiers_l_english.yml
@@ -223,11 +223,17 @@
  DESIGNER_TRAINING_TIME: "£training_speed_texticon  Training time: "
 
 #effects_l_english
- Cat_GENES_research: "£research_bonus_texticon Genetics Research Speed"
- Cat_AI_research: "£research_bonus_texticon Artificial Intelligence Technology"
- Cat_NFIBERS_research: "£research_bonus_texticon Nanofibers Technology"
- Cat_3D_research: "£research_bonus_texticon 3D Printing Technology"
- Cat_satellite_research: "£research_bonus_texticon Satellite Technology"
+ CAT_support_weapons: "£research_bonus_texticon Support Weapons"
+ CAT_inf_wep: "£research_bonus_texticon Infantry Weapons"
+ CAT_naval_eqp: "£research_bonus_texticon Naval Equipment"
+ CAT_bm: "£research_bonus_texticon Ballistic Missiles"
+ CAT_3d_research: "3D Tech"
+ CAT_internet_tech_research: "Internet Tech"
+ CAT_computing_tech_research: "Computing Tech"
+ CAT_genes: "£research_bonus_texticon Genetics Research Speed"
+ CAT_ai_research: "£research_bonus_texticon Artificial Intelligence Technology"
+ CAT_3d: "£research_bonus_texticon 3D Printing Technology"
+ CAT_satellite: "£research_bonus_texticon Satellite Technology"
  EFFECT_ADD_NATIONAL_UNITY: "£national_unity_texticon  Gain Base National Unity: $VAL|+=%$."
  EFFECT_SET_NATIONAL_UNITY: "£national_unity_texticon  Set Base National Unity: $VAL|%$."
  EFFECT_ADD_STABILITY: "£stability_texticon  Gain Base Stability: $VAL|+=%$."
