--- a/localisation/english/MD_game_rules_l_english.yml
+++ b/localisation/english/MD_game_rules_l_english.yml
@@ -530,12 +530,16 @@
  # INFLUENCE OPTIONS
  RULE_SPREAD_INFLUENCE_AMOUNT_GAIN: "Spread Influence Amount Gain"
  RULE_SPREAD_INFLUENCE_AMOUNT_GAIN_DESC: "Change the influence gained from spreading influence."
- RULE_SPREAD_INFLUENCE_DEFAULT_GAIN_3: "3%"
- RULE_SPREAD_INFLUENCE_DEFAULT_GAIN_3_DESC: "3% influence gained per spread action. For if you want to ramp up influence gain."
+ RULE_SPREAD_INFLUENCE_GAIN_3: "3%"
+ RULE_SPREAD_INFLUENCE_GAIN_3_DESC: "3% influence gained per spread action. For if you want to ramp up influence gain."
  RULE_SPREAD_INFLUENCE_GAIN_0_5: "0.5%"
  RULE_SPREAD_INFLUENCE_GAIN_0_5_DESC: "0.5% influence gained per spread action. For if you really want to slow down influence gain."
+ RULE_SPREAD_INFLUENCE_GAIN_1_5: "1.5%"
+ RULE_SPREAD_INFLUENCE_GAIN_1_5_DESC: "1% influence gained per spread action. The default influence gain per spread influence action."
+ RULE_SPREAD_INFLUENCE_GAIN_1: "1%"
+ RULE_SPREAD_INFLUENCE_GAIN_1_DESC: "1% influence gained per spread action. For if you really want to slow down influence gain."
  RULE_SPREAD_INFLUENCE_GAIN_2: "2%"
- RULE_SPREAD_INFLUENCE_GAIN_2_DESC: "The standard influence gained per spread influence action."
+ RULE_SPREAD_INFLUENCE_GAIN_2_DESC: "2% influence gained per sprad action. For if you really want to ramp influence gain."
  RULE_SPREAD_INFLUENCE_GAIN_4: "4%"
  RULE_SPREAD_INFLUENCE_GAIN_4_DESC: "4% influence gained per spread action. For if you really want to ramp up influence gain."
 
